Fixed Bug:3 to reduce gap between main and footer

--- a/CSS/DEBUGGING_ASSIGNMENT/style.css
+++ b/CSS/DEBUGGING_ASSIGNMENT/style.css
@@ -60,6 +60,7 @@ main {
     flex: 1;
     display: flex;
     flex-direction: column;
+    padding-bottom: 0px;
 }
 
 /* Bug #4 (Very Hard) */
